// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with more or no expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
     expenses 
     totalling
     
     $64.61
  </h1>
</div>
`;

exports[`should render summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
     expense 
     totalling
     
     $10.87
  </h1>
</div>
`;
